--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,9 @@ set(HEADERS
 set(DIRECTORIES  
   ${CMAKE_SOURCE_DIR}/GCL
   ${CMAKE_SOURCE_DIR}/SCL    
-  ../fmt/include
+  ${CMAKE_SOURCE_DIR}/fmt/include
   ${Boost_INCLUDE_DIRS}
+  ${CMAKE_SOURCE_DIR}/xlnt/include
   )
 
 
